objects/Programs__c.object
<CustomObject>
    <fields>
        <fullName>Denial_Reason__c</fullName>
        <label>Denial Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Decision__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Prohibitive</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Not enough of a Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Cycle_Program_Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the Account decides to term the Program prior to their renewal date.</inlineHelpText>
        <label>Off-Cycle Program Term. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Program_Decision__c</fullName>
        <label>Program Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Offered__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#0B6FCE</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FF0000</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>"Program Effective Date" may or may not be Opportunity Effective date.  This can be an Off-cycle effective date for the Program selected.</inlineHelpText>
        <label>Program Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Offered__c</fullName>
        <label>Program Offered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PCMH</fullName>
                    <color>#3366FF</color>
                    <label>PCMH</label>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                    <color>#78C953</color>
                    <label>Disease Management</label>
                </value>
                <value>
                    <fullName>Exclusive Specialty Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Integerated DM / Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCCI_Cost_Share_Waiver__c</fullName>
        <label>TCCI Cost Share Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Offered__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>